--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,6 @@
   "singleQuote": true,
   "trailingComma": "all",
   "tabWidth": 2,
-  "endOfLine": "crlf",
+  "endOfLine": "auto",
   "printWidth": 80
 }
