--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 PORT=
-ENV=
+NODE_ENV=
 DATABASE_USER=
 DATABASE_HOST=
 DATABASE_NAME=
 DATABASE_PASSWORD=
 DATABASE_PORT=
+PG_ADMIN_USER=
+PG_ADMIN_PASSWORD=
