--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -27,3 +27,20 @@ jobs:
       - run: npm ci
       - run: npm test
       - run: npm run build --if-present
+
+      - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/portal-alunos-api:latest
