ci: add env variables

--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -24,6 +24,19 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+
+      - name: Create .env file
+        run: |
+          echo "PORT=${{ secrets.PORT }}" >> .env
+          echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env
+          echo "DATABASE_USER=${{ secrets.DATABASE_USER }}" >> .env
+          echo "DATABASE_HOST=${{ secrets.DATABASE_HOST }}" >> .env
+          echo "DATABASE_NAME=${{ secrets.DATABASE_NAME }}" >> .env
+          echo "DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}" >> .env
+          echo "DATABASE_PORT=${{ secrets.DATABASE_PORT }}" >> .env
+          echo "PG_ADMIN_USER=${{ secrets.PG_ADMIN_USER }}" >> .env
+          echo "PG_ADMIN_PASSWORD=${{ secrets.PG_ADMIN_PASSWORD }}" >> .env
+
       - run: npm ci
       - run: npm test
       - run: npm run build --if-present
